Adding dynamic content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <h1>{{title}}</h1>
 <p *ngFor="let item of thingsToDo">{{item}}</p>
+<p *ngIf="thingsCompleted.length == 0">Nothing completed</p>
+<p>Summary: {{ summary() }}</p>
