Adding a child component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <p *ngFor="let item of thingsToDo">{{item}}</p>
 <p *ngIf="thingsCompleted.length == 0">Nothing completed</p>
 <p>Summary: {{ summary() }}</p>
+<app-to-do-list></app-to-do-list>
