--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
 <h1>{{title}}</h1>
-<p *ngFor="let item of thingsToDo">{{item}}</p>
-<p *ngIf="thingsCompleted.length == 0">Nothing completed</p>
-<p>Summary: {{ summary() }}</p>
-<app-to-do-list></app-to-do-list>
+<app-to-do-list [thingsToDo]="thingsToDo"></app-to-do-list>
