--- a/src/app/to-do-list/to-do-list.component.html
+++ b/src/app/to-do-list/to-do-list.component.html
@@ -1,3 +1,3 @@
 <ul>
-  <li *ngFor="let item of thingsToDo"><em>{{item}}</em></li>
+  <li *ngFor="let item of thingsToDo">{{item | titlecase}}</li>
 </ul>
