Fixed routing argument

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>{{title}}</h1>
 
-<a [routerLink]='todo'>To Do</a>
+<a [routerLink]="['todo']">To Do</a>
+<a [routerLink]="['todo', 1]">To Do With Item 1</a>
 <router-outlet></router-outlet>
