adding arguments to routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1>{{title}}</h1>
 
+<nav>
 <a [routerLink]="['todo']">To Do</a>
-<a [routerLink]="['todo', 1]">To Do With Item 1</a>
+<a [routerLink]="['about']">About Us</a>
+<a [routerLink]="['contact']">Contact</a>
+</nav>
 <router-outlet></router-outlet>
