--- a/src/app/to-do-list/to-do-list.component.html
+++ b/src/app/to-do-list/to-do-list.component.html
@@ -1,3 +1,5 @@
 <ul>
-  <li *ngFor="let item of thingsToDo">{{item | titlecase}}</li>
+  <li *ngFor="let item of thingsToDo; let i = index;">
+    <a [routerLink]="['/todo-details', i]">{{item | titlecase}}</a>
+  </li>
 </ul>
