--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <nav>
 <a [routerLink]="['todo']">To Do</a>
-<a [routerLink]="['about']">About Us</a>
+<a (click)="link(['about'])">About Us</a>
 <a [routerLink]="['contact']">Contact</a>
 </nav>
 <router-outlet></router-outlet>
